#512 - Added CloudFormation configuration for Access Token Validity